--- a/todo.org
+++ b/todo.org
@@ -160,14 +160,12 @@ client_session: <aiohttp.client.ClientSession object at 0x131801dc0>
 *** [X] Specify that search tool does not support any special syntax
 ** [ ] Shell tool
 *** [ ] Refactor
-**** [ ] Rethink how shells are managed: individual processes are easy, permanent shell processes are not
+**** [X] Rethink how shells are managed: individual processes are easy, permanent shell processes are not
 **** [ ] Even one-shot executions should be wrapped with a shell of choice instead of running directly
-**** [ ] Refactor shell specs to read from config, instead of having hardcoded parameters
-**** [ ] Create higher-level API that supports stderr/stdout streaming for shells
-**** [ ] Create shell manager per workflow
-- One-shot configuration mode, where individual command is ran and then process is killed, current behavior
-- Permanent local shell mode, one process per workflow
-- Permanent local docker mode, one process per workflow
+**** [X] Refactor shell specs to read from config, instead of having hardcoded parameters
+**** [X] Create higher-level API that supports stderr/stdout streaming for shells
+**** [X] Create shell manager per workflow
+*** [ ] tmux support
 *** [ ] Docker support
 *** [ ] PTY support. Good for interactive tools, like debuggers
 - How to stream results back? Lack of output detection using timer to send answer back?
